# todo_fastapi_grpc

./: .gitignore  LICENSE  Makefile  Notes.md  bd.sqlite  pyproject.toml  todo_grpc_server.py
api/: app.py  router.py
common/: settings.py
docker-compose/: app_router.yaml  app_router_both.yaml  todo_service.yaml
gateway/: Dockerfile  pyproject.toml
gateway/api/: app.py  router.py
gateway/api/routes/: todo_router.py
gateway/grpc_clients/: todo_client.py
grpc_clients/: todo_client.py
protos/: todo_pb2.py  todo_pb2_grpc.py
services/: todo.py
todo_service/: Dockerfile  pyproject.toml  todo_grpc_server.py
todo_service/models/: todo_model.py
todo_service/protos/: todo.proto  todo_pb2.py  todo_pb2_grpc.py
todo_service/services/: todo.py
